@@ -764,7 +764,7 @@ class RepositoryIntegrationTest extends AbstractSpringIntegrationJenkinsGitlabTe
         assertThat(receivedStatusAfterCommit.repositoryStatus()).hasToString("CLEAN");
         var testRepoCommits = studentRepository.getAllLocalCommits();
         assertThat(testRepoCommits).hasSize(1);
-        assertThat(userUtilService.getUserByLogin(TEST_PREFIX + "student1").getName()).isEqualTo(testRepoCommits.get(0).getAuthorIdent().getName());
+        assertThat(userUtilService.getUserByLogin(TEST_PREFIX + "student1").getName()).isEqualTo(testRepoCommits.getFirst().getAuthorIdent().getName());
     }
 
     @Test
@@ -792,7 +792,7 @@ class RepositoryIntegrationTest extends AbstractSpringIntegrationJenkinsGitlabTe
 
         var testRepoCommits = studentRepository.getAllLocalCommits();
         assertThat(testRepoCommits).hasSize(1);
-        assertThat(userUtilService.getUserByLogin(TEST_PREFIX + "student1").getName()).isEqualTo(testRepoCommits.get(0).getAuthorIdent().getName());
+        assertThat(userUtilService.getUserByLogin(TEST_PREFIX + "student1").getName()).isEqualTo(testRepoCommits.getFirst().getAuthorIdent().getName());
     }
 
     @Test
@@ -843,13 +843,13 @@ class RepositoryIntegrationTest extends AbstractSpringIntegrationJenkinsGitlabTe
             GitService.commit(studentRepository.originGit).setMessage("TestCommit").setAllowEmpty(true).setCommitter("testname", "test@email").call();
 
             // Checks if the current commit is not equal on the local and the remote repository
-            assertThat(studentRepository.getAllLocalCommits().get(0)).isNotEqualTo(studentRepository.getAllOriginCommits().get(0));
+            assertThat(studentRepository.getAllLocalCommits().getFirst()).isNotEqualTo(studentRepository.getAllOriginCommits().getFirst());
 
             // Execute the Rest call
             request.get(studentRepoBaseUrl + participation.getId() + "/pull", HttpStatus.OK, Void.class);
 
             // Check if the current commit is the same on the local and the remote repository and if the file exists on the local repository
-            assertThat(studentRepository.getAllLocalCommits().get(0)).isEqualTo(studentRepository.getAllOriginCommits().get(0));
+            assertThat(studentRepository.getAllLocalCommits().getFirst()).isEqualTo(studentRepository.getAllOriginCommits().getFirst());
             assertThat(studentRepository.localRepoFile.toPath().resolve(fileName)).exists();
         }
     }
@@ -891,7 +891,7 @@ class RepositoryIntegrationTest extends AbstractSpringIntegrationJenkinsGitlabTe
             // Merge the two and a conflict will occur
             studentRepository.localGit.fetch().setRemote("origin").call();
             List<Ref> refs = studentRepository.localGit.branchList().setListMode(ListBranchCommand.ListMode.REMOTE).call();
-            var result = studentRepository.localGit.merge().include(refs.get(0).getObjectId()).setStrategy(MergeStrategy.RESOLVE).call();
+            var result = studentRepository.localGit.merge().include(refs.getFirst().getObjectId()).setStrategy(MergeStrategy.RESOLVE).call();
             var status = studentRepository.localGit.status().call();
             assertThat(status.getConflicting()).isNotEmpty();
             assertThat(result.getMergeStatus()).isEqualTo(MergeResult.MergeStatus.CONFLICTING);
@@ -902,7 +902,7 @@ class RepositoryIntegrationTest extends AbstractSpringIntegrationJenkinsGitlabTe
             // Check the git status after the reset
             status = studentRepository.localGit.status().call();
             assertThat(status.getConflicting()).isEmpty();
-            assertThat(studentRepository.getAllLocalCommits().get(0)).isEqualTo(studentRepository.getAllOriginCommits().get(0));
+            assertThat(studentRepository.getAllLocalCommits().getFirst()).isEqualTo(studentRepository.getAllOriginCommits().getFirst());
             var receivedStatusAfterReset = request.get(studentRepoBaseUrl + participation.getId(), HttpStatus.OK, RepositoryStatusDTO.class);
             assertThat(receivedStatusAfterReset.repositoryStatus()).hasToString("CLEAN");
         }
@@ -1168,8 +1168,8 @@ class RepositoryIntegrationTest extends AbstractSpringIntegrationJenkinsGitlabTe
 
         // Check the logs
         List<ILoggingEvent> logsList = listAppender.list;
-        assertThat(logsList.get(0).getMessage()).startsWith("Cannot stash student repository for participation ");
-        assertThat(logsList.get(0).getArgumentArray()).containsExactly(participation.getId());
+        assertThat(logsList.getFirst().getMessage()).startsWith("Cannot stash student repository for participation ");
+        assertThat(logsList.getFirst().getArgumentArray()).containsExactly(participation.getId());
     }
 
     @Test
@@ -1192,7 +1192,7 @@ class RepositoryIntegrationTest extends AbstractSpringIntegrationJenkinsGitlabTe
 
         // Check the logs
         List<ILoggingEvent> logsList = listAppender.list;
-        assertThat(logsList.get(0).getLevel()).isEqualTo(Level.ERROR);
+        assertThat(logsList.getFirst().getLevel()).isEqualTo(Level.ERROR);
     }
 
     @Test
@@ -1226,8 +1226,8 @@ class RepositoryIntegrationTest extends AbstractSpringIntegrationJenkinsGitlabTe
 
         // Check the logs
         List<ILoggingEvent> logsList = listAppender.list;
-        assertThat(logsList.get(0).getMessage()).startsWith("Cannot unlock student repository for participation ");
-        assertThat(logsList.get(0).getArgumentArray()).containsExactly(participation.getId());
+        assertThat(logsList.getFirst().getMessage()).startsWith("Cannot unlock student repository for participation ");
+        assertThat(logsList.getFirst().getArgumentArray()).containsExactly(participation.getId());
     }
 
     @Test
@@ -1250,8 +1250,8 @@ class RepositoryIntegrationTest extends AbstractSpringIntegrationJenkinsGitlabTe
 
         // Check the logs
         List<ILoggingEvent> logsList = listAppender.list;
-        assertThat(logsList.get(0).getMessage()).startsWith("Cannot lock student repository for participation ");
-        assertThat(logsList.get(0).getArgumentArray()).containsExactly(participation.getId());
+        assertThat(logsList.getFirst().getMessage()).startsWith("Cannot lock student repository for participation ");
+        assertThat(logsList.getFirst().getArgumentArray()).containsExactly(participation.getId());
     }
 
     @Test
